# micrograd.cpp

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
src/: main.cpp  micrograd.cpp  micrograd.h
src/micrograd/: micrograd.cpp  micrograd.h  operation.h
tests/: example.cc  value.cc
